Adjusting key for country

--- a/PhoneNumberKit/Resources/en.lproj/Localizable.strings
+++ b/PhoneNumberKit/Resources/en.lproj/Localizable.strings
@@ -6,4 +6,4 @@
   Copyright © 2021 Roy Marmelstein. All rights reserved.
 */
 
-"Choose your country" = "TEST TEST TEST";
+"CHOOSE_YOUR_COUNTRY" = "TEST TEST TEST";
