--- a/PhoneNumberKit/Resources/fr-CA.lproj/Localizable.strings
+++ b/PhoneNumberKit/Resources/fr-CA.lproj/Localizable.strings
@@ -6,4 +6,4 @@
   Copyright © 2021 Roy Marmelstein. All rights reserved.
 */
 
-"Choose your country" = "This is Canadian French";
+"CHOOSE_YOUR_COUNTRY" = "This is Canadian French";
