--- a/PhoneNumberKit/Resources/en.lproj/Localizable.strings
+++ b/PhoneNumberKit/Resources/en.lproj/Localizable.strings
@@ -6,4 +6,6 @@
   Copyright © 2021 Roy Marmelstein. All rights reserved.
 */
 
-"CHOOSE_YOUR_COUNTRY" = "TEST TEST TEST";
+"CHOOSE_YOUR_COUNTRY" = "Choose your country";
+"CURRENT" = "Current";
+"COMMON" = "Common";
