--- a/PhoneNumberKit/Resources/fr-CA.lproj/Localizable.strings
+++ b/PhoneNumberKit/Resources/fr-CA.lproj/Localizable.strings
@@ -6,4 +6,6 @@
   Copyright © 2021 Roy Marmelstein. All rights reserved.
 */
 
-"CHOOSE_YOUR_COUNTRY" = "This is Canadian French";
+"CHOOSE_YOUR_COUNTRY" = "Choose your country (FRENCH NEEDED)";
+"CURRENT" = "Current (FRENCH NEEDED)";
+"COMMON" = "Common (FRENCH NEEDED)";
