--- a/PhoneNumberKit/Resources/en.lproj/Localizable.strings
+++ b/PhoneNumberKit/Resources/en.lproj/Localizable.strings
@@ -9,3 +9,6 @@
 "CHOOSE_YOUR_COUNTRY" = "Choose your country";
 "CURRENT" = "Current";
 "COMMON" = "Common";
+"SELECT_YOUR_COUNTRY_CODE" = "Select your country code";
+"SEARCH_COUNTRY_CODES" = "Search Country Codes";
+"COUNTRY_SELECTED" = "%@ selected";
